--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@ body {
     background-color: #FFFFFF;
     color: #000000;
     display: grid;
-    grid-template-rows: auto 1fr auto;
-    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    grid-template-columns: auto;
     font-family: 'Inter', 'Roboto', 'Open Sans', sans-serif;
     font-size: 24px;
     min-height: 100vh;
