--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,14 +1,14 @@
 .container {
     top: 0;
-    z-index: 1;
+    left: 0;
+    z-index: 1000;
+    display: grid;
     width: 100%;
     height: 80px;
-    display: flex;
     position: fixed;
     padding: 14px 21px;
-    align-items: center;
+    place-items: center;
     background: white;
-    border-bottom: 1px solid rgb(200, 200, 200);
   }
   
   .container img {
@@ -22,12 +22,23 @@
     list-style: none;
     font-weight: bold;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-around;
+  }
+
+  .leftNav {
+    margin-right: 0; 
+    margin-left: 0;     /* Override the general margin-left */
+  }
+  
+  .rightNav {
+    display: flex;
+    align-items: center;
+    margin-right: 0;
   }
   
   .container li {
     margin-left: 35px;
-    text-align: right;
+    text-align: center;
   }
   
   @media only screen and (max-width: 414px) {
