--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,51 +1,165 @@
-.container {
+.leftNav {
     top: 0;
     left: 0;
     z-index: 1000;
-    display: grid;
+    display: block;
     width: 100%;
     height: 80px;
     position: fixed;
-    padding: 14px 21px;
-    place-items: center;
-    background: white;
-  }
-  
-  .container img {
-    width: 50px;
-  }
-  
-  .container ul {
-    margin: 0;
-    width: 100%;
-    display: flex;
-    list-style: none;
-    font-weight: bold;
-    align-items: center;
-    justify-content: space-around;
+    background-color: rgba(26, 19, 16, 0.95);
+    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.4);
+    border-bottom: 1px solid rgba(179, 135, 40, 0.3);
+
   }
 
-  .leftNav {
-    margin-right: 0; 
-    margin-left: 0;     /* Override the general margin-left */
+  .container {
+    max-width: 100%;
+    height: 100%;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .left {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    left: 20px;
   }
   
   .rightNav {
     display: flex;
     align-items: center;
-    margin-right: 0;
+    position: absolute;
+    right: 20px;
+  }
+
+  .rightNav ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    list-style: none;
+    align-items: center;
   }
   
-  .container li {
+  .rightNav li {
     margin-left: 35px;
     text-align: center;
   }
   
-  @media only screen and (max-width: 414px) {
-    .container ul {
-      padding-left: 0px;
+  .rightNav a {
+    color: #e8d9c5;
+    text-decoration: none;
+    font-size: 0.95rem;
+    padding: 8px 0;
+    position: relative;
+    transition: all 0.3s ease;
+  }
+
+  .rightNav a::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 1px;
+    background-color: #b38728;
+    transition: width 0.3s ease;
+  }
+
+  .rightNav a:hover {
+    color: #b38728;
+  }
+  
+  .rightNav a:hover::after {
+    width: 100%;
+  }
+  
+
+  .logo {
+    display: flex;
+    align-items: center;
+    color: #e8d9c5;
+    font-family: serif;
+    font-size: 1.8rem;
+    text-decoration: none;
+    letter-spacing: 1px;
+  }
+
+  .logo img {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+  }
+  
+  .signInBtn, .signUpBtn, .signOutBtn {
+    padding: 8px 16px;
+    border-radius: 4px;
+    font-weight: 600;
+  }
+  
+  .signInBtn {
+    border: 1px solid #b38728;
+  }
+  
+  .signInBtn:hover {
+    background-color: rgba(179, 135, 40, 0.1);
+  }
+  
+  .signUpBtn {
+    background-color: #b38728;
+    color: #1a1310 !important;
+  }
+  
+  .signUpBtn:hover {
+    background-color: #d4a93a;
+    color: #1a1310 !important;
+  }
+  
+  .signUpBtn::after, .signInBtn::after, .signOutBtn::after {
+    display: none;
+  }
+
+  @media only screen and (max-width: 768px) {
+    .rightNav li {
+      margin-left: 20px;
     }
-    .container li {
-      font-size: 15px;
+    
+    .logo {
+      font-size: 1.5rem;
+    }
+    
+    .logo img {
+      width: 35px;
+      height: 35px;
+    }
+  }
+ 
+  @media only screen and (max-width: 414px) {
+    .leftNav {
+      height: 70px;
+    }
+    
+    .rightNav li {
+      margin-left: 15px;
+    }
+    
+    .rightNav a {
+      font-size: 0.9rem;
+    }
+    
+    .logo {
+      font-size: 1.4rem;
+    }
+    
+    .logo img {
+      width: 30px;
+      height: 30px;
+      margin-right: 8px;
+    }
+    
+    .signInBtn, .signUpBtn, .signOutBtn {
+      padding: 6px 12px;
     }
   }
