--- a/src/css-styling/CocktailList.module.css
+++ b/src/css-styling/CocktailList.module.css
@@ -1,6 +1,6 @@
 .pageContainer {
     background-color: #1a1310;
-    background-image: url('src/assets/images/dark-wood-texture.jpg');
+    background-image: url('../assets/images/dark-wood-texture.jpg');
     background-size: cover;
     background-size: cover;
     min-height: 100vh;
