styles on the landing

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-html,
+/* html,
 body {
   margin: 0;
   overflow: hidden;
@@ -95,4 +95,4 @@ a {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
