--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fugaz+One&family=Lora:wght@300;400;600;700&display=swap');
+
 #root {
   min-height: 100vh;
   width: 100%;
@@ -19,7 +21,7 @@
 body {
   background-color: #FFFFFF;
   color: #000000;
-  font-family: 'Inter', 'Roboto', 'Open Sans', sans-serif;
+  font-family: 'Fugaz One', sans-serif;
   font-size: 24px;
   min-height: 100vh;
   margin: 0;
