--- a/src/css-styling/CocktailDetails.module.css
+++ b/src/css-styling/CocktailDetails.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fugaz+One&family=Lora:wght@300;400;600;700&display=swap');
+
 .scrollableWrapper {
   height: 100vh;
   padding-top: 100px;
@@ -11,7 +13,7 @@
   background-image: url('../assets/images/dark-wood-texture.jpg');
   background-size: cover;
   color: #e8d9c5;
-  font-family: sans-serif;
+  font-family: 'Fugaz One', sans-serif;
 }
 
 .formContainer {
@@ -84,8 +86,9 @@
 }
 
 .addButton {
-  background-color: #031161;
+  background-color: #c8651e;
   color: #faf8f7;
+  text-decoration: none;
 }
 
 .addButton:hover {
@@ -199,7 +202,6 @@
 .tag-label:hover {
   background-color: #d4a93a; 
 }
-
 
 @media screen and (max-width: 768px) {
   .cocktail-details-comments-container {
