--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,8 @@
 }
 
 body {
-  background-color: #FFFFFF;
-  color: #000000;
+  /* background-color: #FFFFFF;
+  color: #000000; */
   font-family: 'Inter', 'Roboto', 'Open Sans', sans-serif;
   font-size: 24px;
   min-height: 100vh;
