--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  -webkit-overflow-scrolling: touch;
+  background-color: #1a1310;
+  background-image: url('./assets/images/dark-wood-texture.jpg');
+  background-size: cover;
+  background-attachment: fixed;
   --black-bean: #2A0C14ff;
   --platinum: #DDE0DEff;
   --caput-mortuum: #472123ff;
