--- a/src/css-styling/Dashboard.module.css
+++ b/src/css-styling/Dashboard.module.css
@@ -7,13 +7,11 @@
   align-items: center;
   justify-content: center;
   padding: 40px;
-  background-color: #1a1310; 
-  background-image: url('../assets/images/dark-wood-texture.jpg');
-  background-size: cover;
   color: #e8d9c5; 
   min-height: 100vh;
   font-family: 'Lora', serif;
   text-align: center;
+  margin-top: 50px;
 }
 
 .title {
